# cuda-metal

./: .gitignore  CMakeLists.txt  README.md  spec.md
cmake/: CuMetalToolchain.cmake  prepare_macos_binary.cmake
compiler/air_emitter/src/: emitter.cpp
compiler/common/src/: metallib.cpp
compiler/cumetalc/: README.md  main.cpp
compiler/frontend/: README.md
compiler/ir/src/: ir.cpp  nvvm_importer.cpp  ptx_importer.cpp
compiler/metal/src/: lower_to_msl.cpp  msl_ast.cpp
compiler/passes/src/: addrspace.cpp  intrinsic_lower.cpp  threadgroup_tiling.cpp
compiler/ptx/src/: lower_to_llvm.cpp  lower_to_metal.cpp  parser.cpp
docs/: air-abi.md  apple-gpu-execution.md  compiler-architecture.md  intrinsic-map.md  known-gaps.md  physx-feasibility.md  physx-handoff.md  physx-port-log.md  status.md  testing.md
runtime/api/: cublasLt.h  cublas_api.h  cublas_v2.h  cuda.h  cuda_bf16.h  cuda_fp16.h  cuda_runtime.h  cudnn.h  cufft.h  cumetal_native.h  curand.h  cusolverDn.h  cusolverSp.h  cusparse.h  nccl.h  nvToolsExt.h  nvml.h  sm_20_intrinsics.h  sm_30_intrinsics.h  sm_35_intrinsics.h  sm_60_intrinsics.h  sm_70_intrinsics.h  sm_80_intrinsics.h  vector_functions.h  vector_types.h
runtime/api/cub/: cub.h
runtime/api/nvtx3/: nvToolsExt.h
runtime/common/: cumetal_diag.h
runtime/driver/: cuda_driver.cpp
runtime/metal_backend/: metal_backend.h  metal_backend.mm
runtime/registration/: native_registration.cpp  native_registration.h  registration.cpp  registration.h
runtime/rt/: allocation_table.cpp  allocation_table.h  cublas.cpp  cublaslt.cpp  cuda_runtime.cpp  cudnn.cpp  cufft.cpp  curand.cpp  hash_shim.cpp  nccl.cpp  nvml.cpp
scripts/: benchmark_llama_registered_launches.py  build_llama_cpp_cumetal.sh  build_llmc_test_gpt2fp32cu.sh  cumetal_cuda_flags.sh  fetch_llmc_assets.sh  run_llmc_test_gpt2fp32cu.sh
scripts/cuda_toolchain/: fatbinary
scripts/physx-patches/: 0001-macos-arm64-cpu.patch  0002-cumetal-gpu-subset.patch  0003-cumetal-apple-gpu-platform.patch  0004-cumetal-grb-kernel-subset.patch  0005-cumetal-runtime-grb.patch  0006-physx-grb-conformance.patch  0007-cumetal-grb-contact.patch  0008-cumetal-native-warp-paths.patch  0009-cumetal-grb-kinetic-friction.patch  0010-cumetal-grb-rolling-friction.patch  0011-cumetal-grb-multibody-static-batching.patch  0012-cumetal-grb-dynamic-contact-batching.patch  0013-cumetal-grb-box-plane.patch  0014-cumetal-grb-box-box.patch  0015-cumetal-structured-convex-kernels.patch  0016-cumetal-grb-convex-convex.patch  0017-cumetal-grb-triangle-mesh.patch  0018-cumetal-grb-triangle-seam.patch  0019-cumetal-grb-triangle-friction.patch  0020-cumetal-kernel-init-stubs.patch  README.md  apply_physx_patches.sh  build_physx_cpu_macos.sh  build_physx_cumetal_grb_macos.sh  build_physx_cumetal_kernels_macos.sh
tests/air_abi/: CMakeLists.txt  run_cumetalc_cu_default_output_validate.sh  run_cumetalc_cu_emit_and_load_xcrun.sh  run_cumetalc_cu_experimental_validate.sh  run_cumetalc_cuda_device_frontend_validate.sh
tests/air_abi/reference/: cuda_device_frontend.cu  cuda_device_frontend_config.h  vector_add.cu  vector_add.ptx  vector_add_air.ll
tests/conformance/: CMakeLists.txt  check_llama_cpp_output.sh  check_llama_cpp_output_test.sh  compare_physx_grb.py  compare_physx_grb_friction.py  compare_physx_grb_multibody.py  run_conformance_suite.sh  run_llama_cpp_cumetal.sh  run_llmc_gpt2fp32cu.sh  run_physx_grb.sh  run_physx_grb_box.sh  run_physx_grb_friction.sh  run_physx_grb_multibody.sh  run_physx_grb_stacked.sh  run_physx_grb_trimesh.sh  sweep_llama_cpp_ngl.py
tests/cuda_projects/: CMakeLists.txt  _common.sh  coverage_manifest.json  run_cuda_samples_vectoradd_gpu.sh  run_cuda_source_gpu.sh  run_standalone_cu.sh  run_strict_standalone_cu.sh  sweep_cuda_projects.py
tests/cuda_projects/cuda_samples_vectoradd/: build.sh
tests/cuda_projects/ggml_output_ops/: ggml_output_ops.cu
tests/cuda_projects/reduction/: build.sh  reduction_standalone.cu
tests/cuda_projects/sgemm/: build.sh  sgemm_2d.cu  sgemm_shmem.cu
tests/cuda_projects/softmax/: build.sh  softmax.cu
tests/cuda_projects/transpose/: build.sh  transpose_standalone.cu
tests/cuda_projects/vector_add/: vector_add.cu
tests/functional/: CMakeLists.txt  async_mempool_api_test.cpp  cub_extended_test.cpp  cublas_device_pointer_table_test.cpp  cublas_extended_api_test.cpp  cublaslt_api_test.cpp  cuda_graph_api_test.cpp  cudnn_api_test.cpp  driver_context_switch_test.cpp  driver_error_api_test.cpp  driver_host_pointer_api_test.cpp  driver_kernel_params_bounds_test.cpp  driver_module_load_data_ptx_test.cpp  extended_api_v2_test.cpp  extended_api_v3_test.cpp  extended_api_v4_test.cpp  extended_api_v5_test.cpp  metal_backend_cross_queue_fence_test.cpp  nccl_api_test.cpp  nested_device_pointer_test.cpp  nvml_api_test.cpp  nvtx_api_test.cpp  run_cumetalc_cu_runtime_vector_add.sh  run_cumetalc_cuda_device_runtime.sh  run_driver_module_load_data_ptx.sh  run_nested_device_pointer.sh  run_registration_jit_cache_test.sh  run_runtime_axpy.sh  run_runtime_ptx_lowering_regression.sh  run_runtime_registration_fatbin_ptx.sh  run_runtime_vector_add.sh  run_samples_vector_add.sh  runtime_error_api_test.cpp  runtime_heap_auto_threshold_test.cpp  runtime_host_pointer_api_test.cpp  runtime_warp_mask_votes_test.cpp  thrust_iterators_test.cpp
tests/functional/fixtures/: nested_device_pointer.cu  (+1 more)
tests/ptx_sweep/: run_supported_ops.sh
tests/unit/: CMakeLists.txt  addrspace_pass_test.cpp  allocation_table_test.cpp  check_llama_build_contract_test.sh  cuda_host_qualifiers_test.cpp  cuda_vector_types_test.cpp  cusolver_link_test.sh  ir_test.cpp  metallib_parser_test.cpp  msl_ast_test.cpp  native_registration_test.cpp  nvvm_ir_msl_test.cpp  ptx_ir_msl_test.cpp  ptx_lower_to_llvm_test.cpp  ptx_lower_to_metal_test.cpp  ptx_parser_test.cpp  registration_arg_index_test.cpp  run_cumetalc_shared_ir_test.sh  run_install_uninstall_test.sh  threadgroup_tiling_test.cpp
tests/unit/fixtures/: cuda_float_abs.cu  switch_normalization.cu  unsupported_shared_ir.ptx
tools/cuda_toolchain_shims/: fatbinary.cpp  ptxas.cpp
(+17 files in other folders)
